test/algeff/wrong/ops4.kk.out
test/algeff/wrong/ops4.kk(10,13): error: operator set is not handled